--- a/hazel_of_ocaml.opam
+++ b/hazel_of_ocaml.opam
@@ -11,13 +11,14 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.16"}
-  "ppxlib"
+  "ppxlib" {<= "0.35.0"}
   "merlin-lib"
   "ppx_expect"
   "mdx" {with-test}
   "re"
   "sexplib"
   "unionFind"
+  "reason"
   "menhir"
   "ppx_let"
   "ppx_deriving_qcheck"
