--- a/hazel_of_ocaml.opam
+++ b/hazel_of_ocaml.opam
@@ -9,10 +9,10 @@ homepage: "https://github.com/username/reponame"
 doc: "https://url/to/documentation"
 bug-reports: "https://github.com/username/reponame/issues"
 depends: [
-  "ocaml"
+  "ocaml" {= "5.2.0"}
   "dune" {>= "3.16"}
   "ppxlib" {<= "0.35.0"}
-  "merlin-lib"
+  "merlin-lib" {= "5.2.1-502"}
   "ppx_expect"
   "mdx" {with-test}
   "re"
