--- a/src/dune
+++ b/src/dune
@@ -1,3 +1,3 @@
 (library
  (name hazel_of_ocaml)
- (libraries ppxlib merlin-lib.kernel hazel.menhir))
+ (libraries ppxlib merlin-lib.kernel merlin-lib.query_commands hazel.menhir))
